--- a/src/html/about.html
+++ b/src/html/about.html
@@ -12,11 +12,9 @@
         <main class="m-auto">
             <div class="flex h-full w-full items-start justify-between">
                 <div class="flex h-fit w-1/2 flex-col justify-start pr-6">
-                    <p class="font-playfair-display font-bold text-red-800">
-                        Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jacobs
-                    </p>
+                    <p class="font-playfair-display font-bold text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und ...</p>
 
-                    <p class="font-playfair-display font-bold text-red-800 underline">Exhibitions & Nominations</p>
+                    <p class="font-playfair-display font-bold text-red-800 underline">Ausstellungen und Nominierungen</p>
                     <div class="h-4"></div>
 
                     <div>2023 – Photomatch, Fotofestiwal – Lodz, PL</div>
