--- a/src/html/project.html
+++ b/src/html/project.html
@@ -9,43 +9,41 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "project"}'></include>
         </header>
 
-        <main class="m-auto flex flex-col items-start justify-start font-crimson-text text-lg font-semibold">
+        <main class="flex flex-col items-center justify-start font-crimson-text text-lg font-semibold">
             <!-- 1. -->
-            <div class="mb-6 flex justify-between">
+            <div class="mb-6 flex items-center justify-between">
                 <div class="w-1/2 pr-8 text-justify">
                     Brotherland berichtet von einer Zeit, von der man nur schwer erzählen kann. Die Komplexität der Wendejahre und ihr Erbe
                     wird durch die Kontextualisierung von Fotos, Archivmaterial und Portraits - verknüpft mit Interviews - dargestellt.
                 </div>
-                <div class="h-80 w-1/2 pl-8">
-                    <!-- Image placeholders: -->
-                    <div
-                        class="relative h-full w-full overflow-hidden rounded-sm grayscale transition-[filter] ease-linear hover:rounded-lg hover:bg-slate-400 hover:grayscale-0"
-                    >
+                <div class="w-1/2 pl-8">
+                    <div class="relative aspect-3/2 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
                         <a href="virtual-exhibits/ve2.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jacobs_BROTHERLAND_The Truth Lies in Rostock_ 02.jpg"
-                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/75.jpg),_pointer]"
+                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/virtAusstCursor.png),_pointer]"
                             />
+                            <div class="absolute bottom-0 w-full translate-y-full text-right text-xs">
+                                Filmstill aus <span class="italic">The Truth Lies in Rostock</span>/Spectacle
+                            </div>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- 2. -->
-            <div class="mb-20 flex justify-between">
-                <div class="w-2/5 pb-16">
+            <div class="mb-20 flex items-center justify-between">
+                <div class="w-4/5 pr-8">
                     <!-- Image placeholders: Zaninelli_Jacobs_BROTHERLAND_04.jpg -->
-                    <div
-                        class="relative h-full w-full overflow-hidden rounded-sm grayscale transition-[filter] ease-linear hover:cursor-[url(/public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400 hover:grayscale-0"
-                    >
+                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
                         <a href="virtual-exhibits/ve3.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jacobs_BROTHERLAND_04.jpg"
-                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/75.jpg),_pointer]"
+                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/virtAusstCursor.png),_pointer]"
                             />
                         </a>
                     </div>
                 </div>
-                <div class="w-3/5 pl-8 pt-12 text-justify">
+                <div class="w-fit pl-8 text-justify">
                     <p>
                         Am 9. November 1989 fällt die Berliner Mauer und ein Jahr später wird Deutschland wiedervereinigt. Für viele ein
                         Fest, die Errungenschaft der Freiheit, die Verwirklichung von etwas lang Erträumtem. Für andere der Beginn einer
@@ -65,8 +63,8 @@
                 </div>
             </div>
             <!-- 3. -->
-            <div class="mb-6 flex justify-between">
-                <div class="w-3/5 pr-8 text-justify">
+            <div class="mb-6 flex items-center justify-between">
+                <div class="w-fit pr-8 text-justify">
                     <p>
                         Die „Ausländer raus“-Gewalt nach der Wende begann nicht erst 1992 mit dem Pogrom in Rostock-Lichtenhagen und den
                         Brandanschlägen 1993 in Mölln und Solingen. Bereits 1991 wurden in Hoyerswerda tagelang ein Wohnheim für
@@ -81,31 +79,31 @@
                         nationalistischer Einstellungen, die später zum mörderischen Terror des sogenannten NSU führten.
                     </p>
                 </div>
-                <div class="w-2/5">
+                <div class="w-4/5 pl-8">
                     <!-- Image placeholders:  -->
-                    <div
-                        class="relative h-full w-full overflow-hidden rounded-sm grayscale transition-[filter] ease-linear hover:cursor-[url(/public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400 hover:grayscale-0"
-                    >
+                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
                         <a href="virtual-exhibits/ve3.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jacobs_BROTHERLAND_03.jpg"
-                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/75.jpg),_pointer]"
+                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/virtAusstCursor.png),_pointer]"
                             />
                         </a>
                     </div>
                 </div>
             </div>
             <!-- 4. -->
-            <div class="mb-6 flex">
-                <div class="p-2">
-                    <!-- Image placeholders: -->
-                    <a href="virtual-exhibits/ve3.html">
-                        <div
-                            class="h-full w-96 rounded-sm bg-slate-600 transition-colors ease-linear hover:cursor-[url(/public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400"
-                        ></div>
-                    </a>
+            <div class="mb-6 flex items-center justify-between">
+                <div class="w-4/5 pr-8">
+                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
+                        <!-- Image placeholders: -->
+                        <a href="#" class="group">
+                            <div
+                                class="h-full w-full bg-gray-300 group-hover:cursor-[url(/public/images/virtAusstCursor.png),_pointer]"
+                            ></div>
+                        </a>
+                    </div>
                 </div>
-                <span class="p-2">
+                <span class="w-fit pl-8">
                     <p>
                         In der tagesaktuellen Berichterstattung und auch der Geschichtsschreibung kamen – und kommen – die Menschen, gegen
                         die sich diese Gewalt richtete, selten zu Wort. Auf die Fragen, wieso (deutsche) Jugendliche den Hitlergruß machen
