--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -14,7 +14,7 @@
             <div class="absolute h-full w-full">
                 <a
                     class="absolute left-0 top-0 z-50 h-full hover:cursor-[url(/public/images/75.jpg),_pointer] sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
-                    href="#"
+                    href="./ve4.html"
                 ></a>
 
                 <a
@@ -23,7 +23,7 @@
                 ></a>
             </div>
 
-            <main class="m-auto flex flex-col font-crimson-text text-lg font-bold">
+            <main class="m-auto flex flex-col font-crimson-text text-xl font-bold">
                 <div class="flex h-[40rem]">
                     <div class="relative flex min-h-min basis-1/2 flex-col justify-center pr-1">
                         <span class="pr-20 text-left">
@@ -41,11 +41,11 @@
                     </div>
                     <div class="ml-1 mr-4 flex min-h-min basis-1/2 flex-col">
                         <!-- Plattenbauten Hoch -->
-                        <div class="relative h-full overflow-hidden rounded-sm">
+                        <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_06.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                         <!-- Plattenbauten mittelhoch -->
-                        <div class="relative h-full overflow-hidden rounded-sm pt-2">
+                        <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm pt-2">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_07.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                 <div class="mt-12 flex h-[60rem]">
                     <div class="-mt-20 flex basis-1/2 flex-col justify-between pr-1">
                         <!-- Hausecke; türkise Fenster -->
-                        <div class="relative mr-12 h-3/4 overflow-hidden rounded-sm">
+                        <div class="relative mr-12 aspect-2/3 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_08.jpg" class="absolute h-full w-full object-cover" />
                         </div>
 
@@ -69,7 +69,7 @@
                     </div>
                     <div class="flex basis-1/2 flex-col justify-end pl-1">
                         <!-- Feuerzeug -->
-                        <div class="relative ml-8 mt-24 h-3/4 overflow-hidden rounded-sm">
+                        <div class="relative ml-8 mt-24 aspect-2/3 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_09.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                 <div class="flex h-[60rem] pt-14">
                     <div class="basis-2/3 pb-24 pr-8">
                         <!-- Nahaufnahme Interviewpartner -->
-                        <div class="relative h-full overflow-hidden rounded-sm">
+                        <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_010.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                 <div class="flex h-[40rem] pt-24">
                     <div class="flex w-full flex-col justify-between">
                         <!-- Schwimmbad -->
-                        <div class="relative -mt-12 h-full w-full overflow-hidden rounded-sm">
+                        <div class="relative -mt-12 aspect-3/2 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_011.jpg" class="absolute object-cover" />
                         </div>
 
@@ -123,7 +123,7 @@
 
                     <div class="w-full pt-32">
                         <!-- Datsche -->
-                        <div class="relative h-full overflow-hidden rounded-sm">
+                        <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_012.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                 <div class="relative mt-36 flex h-[60rem] w-full">
                     <div class="flex w-3/5 flex-col justify-between">
                         <!-- Baum -->
-                        <div class="relative mt-44 h-full w-full overflow-hidden rounded-sm">
+                        <div class="relative mt-44 aspect-2/3 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_013.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
