--- a/src/html/book.html
+++ b/src/html/book.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Book"}' />
     </head>
@@ -10,12 +9,10 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "book"}'></include>
         </header>
 
-        <main class="m-auto">
-            <div class="flex flex-col justify-start items-center">
-                <div>Ein Foto-Text-Buch mit mehr Interviews,
-                    Fotos und Archivmaterial ist in Arbeit.</div>
+        <main class="m-auto font-crimson-text">
+            <div class="flex flex-col items-center justify-start">
+                <div>Ein Foto-Text-Buch mit mehr Interviews, Fotos und Archivmaterial ist in Arbeit.</div>
             </div>
         </main>
     </body>
-
 </html>
