--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -23,7 +23,7 @@
                 ></a>
             </div>
 
-            <main class="m-auto flex flex-col font-crimson-text text-lg font-bold">
+            <main class="m-auto flex flex-col font-crimson-text text-xl font-bold">
                 <div class="flex h-[76rem] pt-20">
                     <div class="relative flex h-full basis-1/2 flex-col justify-between pr-1">
                         <!-- Audio -->
@@ -36,14 +36,14 @@
                         </div>
 
                         <!-- Steine -->
-                        <div class="relative z-10 h-full translate-x-8 overflow-hidden rounded-sm">
+                        <div class="relative z-10 aspect-2/3 w-full translate-x-8 overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_015.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
 
                     <div class="ml-1 mr-4 flex h-full basis-1/2 flex-col items-center justify-between">
                         <!-- Tauben-->
-                        <div class="relative h-full w-full overflow-hidden rounded-sm pt-16">
+                        <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm pt-16">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_014.jpg" class="absolute object-cover" />
                         </div>
 
@@ -77,7 +77,7 @@
                     </div>
                     <div class="flex basis-3/5 flex-col justify-start pl-1">
                         <!-- Interviewpartner -->
-                        <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_016.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                     <div class="flex h-[60rem] justify-center pt-44">
                         <div class="w-3/5">
                             <!-- Nahaufnahme Interviewpartner -->
-                            <div class="relative h-full w-full overflow-hidden rounded-sm">
+                            <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
                                 <img
                                     src="/public/images/Zaninelli_Jacobs_BROTHERLAND_017.jpg"
                                     class="absolute h-full w-full object-cover"
@@ -112,7 +112,7 @@
                 <div class="-mx-20 flex h-[60rem]">
                     <div class="flex basis-1/2 flex-col justify-between pr-12">
                         <!-- Fresse 1 -->
-                        <div class="relative -mt-12 h-full w-full overflow-hidden rounded-sm">
+                        <div class="relative -mt-12 aspect-3/2 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_018.jpg" class="absolute object-cover" />
                         </div>
 
@@ -127,12 +127,12 @@
 
                     <div class="flex basis-1/2 flex-col justify-end py-28 pl-12">
                         <!-- Fresse 2 -->
-                        <div class="relative h-3/5 w-full overflow-hidden rounded-sm">
+                        <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_019.jpg" class="absolute h-full w-full object-cover" />
                         </div>
 
                         <!-- Fresse 3 -->
-                        <div class="relative h-4/5 w-full overflow-hidden rounded-sm pt-20">
+                        <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm pt-20">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_020.jpg" class="absolute h-full w-full object-cover" />
                         </div>
                     </div>
@@ -140,10 +140,10 @@
 
                 <div class="-mx-20 mt-32 flex h-[96rem]">
                     <div class="flex w-3/4 flex-col items-center justify-center pr-8">
-                        <div class="mt-auto h-3/4"></div>
+                        <div class="mt-auto h-1/3"></div>
 
                         <!-- Autobrand -->
-                        <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_022.jpg" class="absolute object-cover" />
                         </div>
 
@@ -152,7 +152,7 @@
 
                     <div class="-mr-8 flex w-fit flex-col justify-between">
                         <!-- Bauzaun -->
-                        <div class="relative h-full w-full overflow-hidden rounded-sm">
+                        <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_021.jpg" class="absolute object-cover" />
                             <div class="absolute m-auto h-full w-1/3 translate-x-2/3 translate-y-1/2">
                                 <!-- Audio "wir wollten das ja letzten endes" -->
